--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@apollo/client": "^4.1.6",
+    "@elysiajs/cors": "^1.4.1",
     "@tabler/icons-react": "^3.37.1",
+    "@uiw/react-heat-map": "^2.3.3",
+    "elysia": "^1.4.26",
+    "elysia-rate-limit": "^4.5.0",
+    "graphql": "^16.13.0",
     "next": "16.1.6",
+    "next-remove-imports": "^1.0.12",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bun": "^1.3.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
