--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^4.1.6",
     "@elysiajs/cors": "^1.4.1",
+    "@elysiajs/eden": "^1.4.8",
     "@tabler/icons-react": "^3.37.1",
     "@uiw/react-heat-map": "^2.3.3",
     "elysia": "^1.4.26",
