--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@elysiajs/cors": "^1.4.1",
     "@elysiajs/eden": "^1.4.8",
     "@tabler/icons-react": "^3.37.1",
+    "@tanstack/react-query": "^5.90.21",
     "@uiw/react-heat-map": "^2.3.3",
     "elysia": "^1.4.26",
     "elysia-rate-limit": "^4.5.0",
