--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
   },
   "dependencies": {
     "@apollo/client": "^4.1.6",
+    "@base-ui/react": "^1.2.0",
     "@elysiajs/cors": "^1.4.1",
     "@elysiajs/eden": "^1.4.8",
     "@tabler/icons-react": "^3.37.1",
     "@tanstack/react-query": "^5.90.21",
-    "@uiw/react-heat-map": "^2.3.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "elysia": "^1.4.26",
     "elysia-rate-limit": "^4.5.0",
     "graphql": "^16.13.0",
     "next": "16.1.6",
-    "next-remove-imports": "^1.0.12",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "tailwind-merge": "^3.5.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
@@ -32,7 +36,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "shadcn": "^3.8.5",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   },
   "ignoreScripts": [
