--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@elysiajs/eden": "^1.4.8",
     "@tabler/icons-react": "^3.37.1",
     "@tanstack/react-query": "^5.90.21",
+    "@vercel/speed-insights": "^1.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
